--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -6,4 +6,14 @@ html, body {
     h1 {text-align: center;}
     p {text-align: center;}
     div {text-align: center;}
-  }
+  } */
+
+html, body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+h1, p, div {
+    text-align: center;
+}
