--- a/style.css
+++ b/style.css
@@ -8,7 +8,13 @@ h1, p, div {
     text-align: center;
 }
 
+.questions
+{
+     text-align: center
+}
+
 .questions p.q1
 {
     text-align: left;
 }
+
