--- a/black_style.css
+++ b/black_style.css
@@ -2,6 +2,8 @@ html, body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: black; /* Set the background color to black */
+    color: white; /* Set text color to white */
 }
 
 h1, p, div {
@@ -22,8 +24,5 @@ h1, p, div {
 {
     text-align: left;
 }
-<style> 
 
-*{ Color : #fff; 
-  Background : #000;} 
-</style> 
+
